src/test/deca/syntax/invalid/created/matherror/matherror3.deca

//DESCRIPTION : oublie du signe multiplier
//## TEST SYN
//  Ligne 8 : no viable alternative at input 'w'

{
 int w = 2;
 int a = 42w;
}